--- a/README.html
+++ b/README.html
@@ -28,9 +28,8 @@
 
 <h3 id="scssfilesstructure:">SCSS Files structure:</h3>
 
-<p>custom.scss</p>
-
 <ul>
+<li>oxyset_dev-core.scss</li>
 <li>_00_mixin.scss</li>
 <li>_00_variables.scss</li>
 <li>_1_base.scss</li>
